# fluxus

./: .gitignore  CMakeLists.txt  ProjectPlan.md  README.md  build_log.txt  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
examples/rayleigh-taylor/: rt_instability.py  tempCodeRunnerFile.py
examples/sod-shock-tube/: sod_comparison.py  sod_shock_tube.py
src/core/: bindings.cpp
src/core/include/: Grid.hpp  types.hpp
src/core/include/flux/: HLLC.hpp  HLLSolver.hpp  RiemannSolver.hpp  Roe.hpp
src/core/include/integrator/: Godunov.hpp  MUSCLHancock.hpp  TimeIntegrator.hpp
src/core/include/reconstruct/: Minmod.hpp  PiecewiseConstant.hpp  Reconstructor.hpp  Superbee.hpp  VanLeer.hpp  minmod.hpp  superbee.hpp  vanLeer.hpp
src/core/include/source-term/: Gravity.hpp  SourceTerm.hpp
src/core/lib/: Grid.cpp
src/core/lib/flux/: HLL.cpp  HLLC.cpp  HLLCSolver.cpp  HLLSolver.cpp  Roe.cpp  RoeSolver.cpp
src/core/lib/integrator/: Godunov.cpp  MUSCLHancock.cpp
src/core/python-core/: godunov_2d.py  godunov_scheme.py  riemann_solvers.py
src/fluxus/: __init__.py  config.py  simulation.py  utils.py
tests/: conftest.py
tests/core/: test_flux.py  test_integrator.py
