[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "fluxus"
version = "0.1.0"
description = "High-performance Godunov CFD solver"
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "numpy>=1.20",
    "matplotlib",
    "pydantic>=2.0",
    "pydantic-settings",
    "pybind11"
]

[project.optional-dependencies]
test = ["pytest", "pytest-benchmark"]
dev = ["black", "isort", "mypy"]

# Tells scikit-build-core to look for CMakeLists.txt in the root
[tool.scikit-build]
cmake.version = ">=3.15"
# Installs the compile extension into the python package folder
wheel.packages = ["src/fluxus"]